[package]
name = "json-patcher"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
serde = "1.0.158"
json-patch = "1.0.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neon-serde = { git = "https://github.com/formbird/neon-serde", package = "neon-serde2", features = ["dates"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
serde-wasm-bindgen = "0.5.0"
