[package]
name = "json-patcher"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = "1.0.158"
json-patch = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neon-serde = { git = "https://github.com/formbird/neon-serde", package = "neon-serde2", features = ["dates"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
serde-wasm-bindgen = { git = "https://github.com/hamza1311/serde-wasm-bindgen", branch = "special-dates", features = ["special-dates"] }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = true